tests/snapshot/error/source_locations/expression/typeof/load_global_throws.js
Object.defineProperty(globalThis, 'x', {
  get() {
    throw new Error('Error on get');
  }
});

typeof x;