tests/snapshot/error/source_locations/expression/typeof/load_global_throws.exp
Error: Error on get
  ┌ source_locations/expression/typeof/load_global_throws.js:3:11
  |
3 |     throw new Error('Error on get');
  |           ^
Stack trace:
  at get (source_locations/expression/typeof/load_global_throws.js:3:11)
  at <global> (source_locations/expression/typeof/load_global_throws.js:7:8)